Use minify version of phaser

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Hit Balls</title>
 </head>
 <body>
-	<script src="js/lib/phaser.js"></script>
+	<script src="js/lib/phaser.min.js"></script>
 	<script src="js/state/boot.js"></script>
 	<script src="js/state/load.js"></script>
 	<script src="js/state/menu.js"></script>
